--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script src="jquery.jslatex.js"></script>
 
+<script>
+  $(function () {
+    $(".latex").latex();
+});
+</script>
+
+<div class="latex">
+  \int_{0}^{\pi}\frac{x^{4}\left(1-x\right)^{4}}{1+x^{2}}dx =\frac{22}{7}-\pi
+</div>
