--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     $(".latex").latex();
 });
 </script>
-
+ $(".latex").latex();
 <div class="latex">
   \int_{0}^{\pi}\frac{x^{4}\left(1-x\right)^{4}}{1+x^{2}}dx =\frac{22}{7}-\pi
 </div>
