--- a/index.html
+++ b/index.html
@@ -1,12 +1,2 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script src="jquery.jslatex.js"></script>
-
-<script>
-  $(function () {
-    $(".latex").latex();
-});
-</script>
- $(".latex").latex();
-<div class="latex">
-  \int_{0}^{\pi}\frac{x^{4}\left(1-x\right)^{4}}{1+x^{2}}dx =\frac{22}{7}-\pi
-</div>
+<script src="polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="tex-mml-chtml.js"></script>
