--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
+<head>
 <script id="MathJax-script" async src="tex-mml-chtml.js"></script>
+</head>
+<body>
+When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
+$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+</body>
