--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <head>
 <script id="MathJax-script" async src="tex-mml-chtml.js"></script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
 </head>
 <body>
 When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
