--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<script id="MathJax-script" async src="tex-mml-chtml.js"></script>
+<script type="text/javascript" src="MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
 </script>
