--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ function debug() {
   document.getElementById('output').textContent = _ge;
 }
 </script>
-<input type="text" id="grailed"></input>
+<input type="text" id="grailed">
 </head>
 <body>
 <p id="output"></p>
