--- a/index.html
+++ b/index.html
@@ -1,19 +1,2 @@
-<head>
-<script type="text/javascript" src="MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-</script>
-<script>
-function debug() {
-  var inputty = document.getElementById("grailed").value;
-  var _ge = inputty.toString();  
-
-  document.getElementById('output').textContent = _ge;
-}
-</script>
-<input type="text" id="grailed">
-<p id="output"></p>
-</head>
-<body>
-
-</body>
+\[\frac{-b\pm\sqrt{b^2-4ac}}{2a}\]
+<script type="text/javascript" src="MathJax.js?config=OK"></script>
