--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-\[\frac{-b\pm\sqrt{b^2-4ac}}{2a}\]
+$$\frac{-b\pm\sqrt{b^2-4ac}}{2a}$$
 <script type="text/javascript" src="MathJax.js?config=OK"></script>
