--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
       <!--FOOTER ENDS -->
       <div data-options="region:'center'" style="padding:0px;" id="left">
          <!-- LEFT STARTS -->
-         <div data-options="fit:true, border:false,tools:'#tab-tools',toolPosition:'left'" id="codebox"
-            class="easyui-tabs">
+         <div data-options="fit:true, border:false,tools:'#tab-tools',toolPosition:'left'" id="codebox">
             <div title="LaTex Code" style="padding:0px;">
                <pre id="code" style="width:100%; height:98%;"></pre>
             </div>
